deploy/kubernetes/filesystem-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: filesystem
  name: filesystem
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: filesystem
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/tmp/
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: filesystem
    spec:
      containers:
        - image: beetle/filesystem:0.0.1
          name: filesystem
          ports:
            - containerPort: 9100
          resources: {}
          volumeMounts:
            - mountPath: /data/conf
              name: filesystem-cm0
            - mountPath: /var/lib/filesystem
              name: filesystem-claim1
      hostname: gateway
      restartPolicy: Always
      volumes:
        - configMap:
            name: filesystem-cm0
          name: filesystem-cm0
        - name: filesystem-claim1
          persistentVolumeClaim:
            claimName: filesystem-claim1
status: {}
