deploy/kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/tmp/
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - image: beetle/gateway:0.0.1
          name: gateway
          ports:
            - containerPort: 8000
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /data/conf
              name: gateway-cm0
      hostname: gateway
      restartPolicy: Always
      volumes:
        - configMap:
            name: gateway-cm0
          name: gateway-cm0
status: {}
