deploy/kubernetes/im-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: im-db
  name: im-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: im-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/tmp/
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.type: persistentVolumeClaim
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: im-db
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: "123456"
          image: mysql:8
          name: im-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: im-db-claim0
      hostname: im-db
      restartPolicy: Always
      volumes:
        - name: im-db-claim0
          persistentVolumeClaim:
            claimName: im-db-claim0
status: {}
