deploy/kubernetes/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/tmp/
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: jaeger
    spec:
      containers:
        - env:
            - name: COLLECTOR_OTLP_ENABLED
              value: "true"
            - name: LOG_LEVEL
              value: debug
          image: jaegertracing/all-in-one:latest
          name: jaeger
          ports:
            - containerPort: 16686
            - containerPort: 14268
          resources: {}
      restartPolicy: Always
status: {}
