deploy/kubernetes/jaeger-hotrod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-hotrod
  name: jaeger-hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger-hotrod
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/tmp/
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: jaeger-hotrod
    spec:
      containers:
        - args:
            - all
          image: jaegertracing/example-hotrod:latest
          name: jaeger-hotrod
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
