deploy/kubernetes/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/kubernetes
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deploy/kubernetes
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.type: persistentVolumeClaim
      creationTimestamp: null
      labels:
        io.kompose.network/beetle-beetle-network: "true"
        io.kompose.service: user-db
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: "123456"
          image: mysql:8
          name: user-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: user-db-claim0
      hostname: user-db
      restartPolicy: Always
      volumes:
        - name: user-db-claim0
          persistentVolumeClaim:
            claimName: user-db-claim0
status: {}
