deploy/kubernetes/gateway-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: gateway-tcp
  name: gateway-tcp
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: gateway
  type: LoadBalancer
status:
  loadBalancer: {}
