deploy/kubernetes/im-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: im-svc
  name: im-svc
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "10000"
      port: 10000
      targetPort: 10000
  selector:
    io.kompose.service: im-svc
status:
  loadBalancer: {}
