deploy/kubernetes/jaeger-hotrod-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-hotrod-tcp
  name: jaeger-hotrod-tcp
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: jaeger-hotrod
  type: LoadBalancer
status:
  loadBalancer: {}
