deploy/kubernetes/jaeger-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-tcp
  name: jaeger-tcp
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
  selector:
    io.kompose.service: jaeger
  type: LoadBalancer
status:
  loadBalancer: {}
