deploy/kubernetes/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/kubernetes
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: user-db
status:
  loadBalancer: {}
