deploy/kubernetes/user-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deploy/tmp/
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: user-svc
  name: user-svc
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: user-svc
status:
  loadBalancer: {}
