deploy/kubernetes/beetle-beetle-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: beetle-beetle-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/beetle-beetle-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/beetle-beetle-network: "true"
